--- a/mailPilot-v11/mailPilot-v11.csproj
+++ b/mailPilot-v11/mailPilot-v11.csproj
@@ -63,7 +63,12 @@
     <Content Include="assets\images\1shot.png" />
     <Content Include="assets\images\3shot.png" />
     <Content Include="assets\images\actor.png" />
+    <Content Include="assets\images\atlas.png" />
     <Content Include="assets\images\atlas1.png" />
+    <Content Include="assets\images\atlas_all.png" />
+    <Content Include="assets\images\atlas_level1.png" />
+    <Content Include="assets\images\atlas_level2.png" />
+    <Content Include="assets\images\atlas_level3.png" />
     <Content Include="assets\images\background.png" />
     <Content Include="assets\images\enemyBot_03.png" />
     <Content Include="assets\images\enemyBot_04.png" />
@@ -127,11 +132,10 @@
     <TypeScriptCompile Include="Scripts\managers\bulletBossCollision.ts" />
     <TypeScriptCompile Include="Scripts\managers\bulletCollision.ts" />
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
-    <TypeScriptCompile Include="Scripts\objects\boss.ts" />
     <TypeScriptCompile Include="Scripts\objects\BossScoreboard.ts" />
     <TypeScriptCompile Include="Scripts\objects\bullet.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
-    <TypeScriptCompile Include="Scripts\objects\cloud.ts" />
+    <TypeScriptCompile Include="Scripts\objects\planets.ts" />
     <TypeScriptCompile Include="Scripts\objects\island.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
     <TypeScriptCompile Include="Scripts\objects\ocean.ts" />
@@ -144,8 +148,13 @@
     <TypeScriptCompile Include="Scripts\states\bossStage.ts" />
     <TypeScriptCompile Include="Scripts\states\gameover.ts" />
     <TypeScriptCompile Include="Scripts\states\instruction.ts" />
-    <TypeScriptCompile Include="Scripts\states\menu.ts" />
-    <TypeScriptCompile Include="Scripts\states\play.ts" />
+    <TypeScriptCompile Include="Scripts\states\menu_home.ts" />
+    <TypeScriptCompile Include="Scripts\states\menu_level3.ts" />
+    <TypeScriptCompile Include="Scripts\states\menu_level2.ts" />
+    <TypeScriptCompile Include="Scripts\states\menu_level1.ts" />
+    <TypeScriptCompile Include="Scripts\states\play_level3.ts" />
+    <TypeScriptCompile Include="Scripts\states\play_level2.ts" />
+    <TypeScriptCompile Include="Scripts\states\play_level1.ts" />
     <TypeScriptCompile Include="Scripts\lib\tweenjs.d.ts" />
     <TypeScriptCompile Include="Scripts\states\win.ts" />
   </ItemGroup>
