Done devided stages for objects and bullets

--- a/mailPilot-v11/mailPilot-v11.csproj
+++ b/mailPilot-v11/mailPilot-v11.csproj
@@ -130,10 +130,15 @@
     <TypeScriptCompile Include="Scripts\managers\asset.ts" />
     <TypeScriptCompile Include="Scripts\managers\bossCollision.ts" />
     <TypeScriptCompile Include="Scripts\managers\bulletBossCollision.ts" />
-    <TypeScriptCompile Include="Scripts\managers\bulletCollision.ts" />
+    <TypeScriptCompile Include="Scripts\managers\bulletCollision_L3.ts" />
+    <TypeScriptCompile Include="Scripts\managers\bulletCollision_L2.ts" />
+    <TypeScriptCompile Include="Scripts\managers\collision_L3.ts" />
+    <TypeScriptCompile Include="Scripts\managers\collision_L2.ts" />
     <TypeScriptCompile Include="Scripts\managers\collision.ts" />
-    <TypeScriptCompile Include="Scripts\objects\BossScoreboard.ts" />
-    <TypeScriptCompile Include="Scripts\objects\bullet.ts" />
+    <TypeScriptCompile Include="Scripts\objects\boss.ts" />
+    <TypeScriptCompile Include="Scripts\objects\Level3\bullet_L3.ts" />
+    <TypeScriptCompile Include="Scripts\objects\Level3\BossScoreboard.ts" />
+    <TypeScriptCompile Include="Scripts\objects\Level2\bullet_L2.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
     <TypeScriptCompile Include="Scripts\objects\Level1\island.ts" />
     <TypeScriptCompile Include="Scripts\objects\Level2\island.ts" />
